10-section-ten-ingress/grade-submission-portal/grade-submission-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-submission-portal
  namespace: grade-submission
spec:
  type: ClusterIP #Access to node via local
  selector:
    app.kubernetes.io/instance: grade-submission-portal
  ports:
  - port: 5001
    targetPort: 5001

#kubectl apply -f grade-submission-portal-pod.yaml
#kubectl apply -f grade-submission-portal-service.yaml
